# DreamCore

./: .gitignore  README.md
docs/: processor_pipeline.drawio
fpga/: rv32_core.xpr
model/model/: CMakeLists.txt  CMakePresets.json
model/model/src/component/: branch_predictor.h  bus.h  checkpoint_buffer.h  csr_all.h  csr_base.h  csrfile.h  fifo.h  interrupt_interface.h  issue_queue.h  port.h  ras.h  rat.h  regfile.h  rob.h  slave_base.h  stack.h  store_buffer.h
model/model/src/component/csr/: charfifo.h  finish.h  marchid.h  mcause.h  mconfigptr.h  mcounteren.h  mcycle.h  mcycleh.h  mepc.h  mhartid.h  mhpmcounter.h  mhpmcounterh.h  mie.h  mimpid.h  minstret.h  minstreth.h  mip.h  misa.h  mscratch.h  mstatus.h  mstatush.h  mtval.h  mtvec.h  mvendorid.h  pmpaddr.h  pmpcfg.h
model/model/src/component/slave/: clint.h  memory.h
model/model/src/pipeline/: commit.cpp  commit.h  decode.cpp  decode.h  decode_rename.h  execute.h  execute_wb.h  fetch.cpp  fetch.h  fetch_decode.h  issue.cpp  issue.h  issue_execute.h  pipeline_common.h  readreg.cpp  readreg.h  readreg_issue.h  rename.cpp  rename.h  rename_readreg.h  wb.cpp  wb.h  wb_commit.h
model/model/src/pipeline/execute/: alu.cpp  alu.h  bru.cpp  bru.h  csr.cpp  csr.h  div.cpp  div.h  lsu.cpp  lsu.h  mul.cpp  mul.h
model/model/src/test/: fifo.cpp  fifo.h  issue_queue.cpp  issue_queue.h  port.cpp  port.h  rat.cpp  rat.h  regfile.cpp  regfile.h  stack.cpp  stack.h  test.cpp  test.h
model/model/src/top_header/: common.h  config.h  magic_enum.h
model/model/src/top_source/: main.cpp
rtl/: branch_predictor.sv  bus.sv  (+41 more)
(+1380 files in other folders)
